--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,13 +1,10 @@
 {
   "name": "server",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsdown",
-    "check-types": "tsc -b",
-    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js"
+    "dev": "node --watch src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -16,13 +13,5 @@
     "cors": "^2.8.5",
     "mongoose": "^8.14.0",
     "better-auth": "^1.3.0"
-  },
-  "devDependencies": {
-    "tsdown": "^0.12.9",
-    "typescript": "^5.8.2",
-    "@types/express": "^5.0.1",
-    "@types/cors": "^2.8.17",
-    "tsx": "^4.19.2",
-    "@types/node": "^22.13.11"
   }
 }
