--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,11 +7,12 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "zod": "^4.0.2",
-    "express": "^5.1.0",
+    "bcrypt": "^6.0.0",
+    "better-auth": "^1.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "mongoose": "^8.14.0",
-    "better-auth": "^1.3.0"
+    "zod": "^4.0.2"
   }
 }
