--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
     "@react-router/node": "^7.6.1",
     "@react-router/serve": "^7.6.1",
     "@tanstack/react-form": "^1.12.0",
-    "@tanstack/react-query": "^5.80.5",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "better-auth": "^1.3.0",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +26,7 @@
     "radix-ui": "^1.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-router": "^7.6.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
