refactor: update package scripts, remove unused wrangler configuration, and enhance user profile display with additional information

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,10 +5,8 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc",
-    "wrangler:dev": "wrangler dev --port=3001",
-    "deploy": "pnpm run build && wrangler deploy"
+    "start": "react-router-serve ./build/client/index.html",
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@react-router/fs-routes": "^7.6.1",
@@ -34,7 +32,6 @@
     "zod": "^4.0.2"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.9.0",
     "@react-router/dev": "^7.6.1",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query-devtools": "^5.80.5",
@@ -45,7 +42,6 @@
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.23.0"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
