--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@react-router/fs-routes": "^7.6.1",
     "@react-router/node": "^7.6.1",
     "@react-router/serve": "^7.6.1",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-form": "^1.12.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
@@ -25,6 +26,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
